--- a/app/views/lists/_nav.html.erb
+++ b/app/views/lists/_nav.html.erb
@@ -1,15 +1,20 @@
-<nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark border-bottom border-body shadow-sm">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <%= link_to "ToDos", lists_path, class: "navbar-brand fw-bold" %>
+
+    <!-- Hamburger toggle (hidden on lg and up) -->
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
+            aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
+
+    <!-- Collapsible links -->
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-link active" aria-current="page" href="#">Home</a>
-        <a class="nav-link" href="#">Features</a>
-        <a class="nav-link" href="#">Pricing</a>
-        <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+      <div class="navbar-nav ms-auto">
+        <%= link_to "Home", root_path, class: "nav-link #{'active' if current_page?(root_path)}" %>
+        <%= link_to "Lists", lists_path, class: "nav-link #{'active' if current_page?(lists_path)}" %>
+        <%= link_to "New List", new_list_path, class: "nav-link #{'active' if current_page?(new_list_path)}" %>
       </div>
     </div>
   </div>
