--- a/app/views/lists/_list.html.erb
+++ b/app/views/lists/_list.html.erb
@@ -1,7 +1,7 @@
 <div id="<%= dom_id(list) %>" class="card shadow-sm border-0 mb-3">
   <div class="card-body">
     <h5 class="card-title mb-3 text-primary fw-semibold">
-      <%= list.desc.presence || "Untitled List" %>
+      <%= list.desc.presence || "Untitled Todo" %>
     </h5>
 
     <p class="card-text mb-2">
