--- a/app/views/lists/_nav.html.erb
+++ b/app/views/lists/_nav.html.erb
@@ -13,8 +13,8 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav ms-auto">
         <%= link_to "Home", root_path, class: "nav-link #{'active' if current_page?(root_path)}" %>
-        <%= link_to "Lists", lists_path, class: "nav-link #{'active' if current_page?(lists_path)}" %>
-        <%= link_to "New List", new_list_path, class: "nav-link #{'active' if current_page?(new_list_path)}" %>
+        <%= link_to "Todos", lists_path, class: "nav-link #{'active' if current_page?(lists_path)}" %>
+        <%= link_to "New Todo", new_list_path, class: "nav-link #{'active' if current_page?(new_list_path)}" %>
       </div>
     </div>
   </div>
